assets/stylesheets/assigns.scss
.user-content {
  .assign-controls {
    display: flex;
    justify-content: flex-end;
    margin-bottom: 0.5em;

    .assign-messages-assigned {
      margin-right: 0.5em;
    }
  }
}

.assigned-to {
  .d-icon,
  i.fa {
    margin-right: 0.25em;
    color: var(--primary-medium);
  }
  .assign-text {
    margin-right: 0.25em;
  }

  .composer-popup & {
    margin-left: 0.5em;
  }
  .assignee:not(:last-child):after {
    content: ", ";
  }
}

.topic-body {
  .assigned-to {
    padding-left: 11px;
  }
}

.cant-act-flagged-post {
  padding: 0.5em;
  border: 1px dashed var(--primary-medium);
  color: var(--primary);

  display: flex;
  justify-content: space-between;
  align-items: center;
}

.assigned-to-user {
  display: flex;
  align-items: center;

  img.avatar {
    margin-right: 0.3em;
  }

  .unassign {
    margin-left: 0.5em;
  }
}

.topic-assigned-to {
  min-width: 15%;
  width: 15%;
}

.list-tags.assigned {
  margin-left: 5px;
}

.assign-user-modal {
  .modal-inner-container {
    width: 400px;
  }

  .assign.modal-body {
    overflow-y: unset;
  }

  label {
    font-weight: bold;

    .label-optional {
      color: var(--primary-medium);
      font-weight: normal;
    }
  }

  .email-group-user-chooser {
    width: 100%;

    .select-kit-header {
      outline: 0 !important;
    }
    .select-kit-body {
      position: absolute !important;
      transform: none !important;
      max-width: 100%;
    }

    &-filter.is-expanded {
      border: 1px solid var(--tertiary);
    }

    .caret-icon {
      color: var(--primary-medium);
    }

    .user-wrapper {
      display: flex;
      align-items: flex-end;
      line-height: var(--line-height-small);
      overflow: hidden;
    }

    .name {
      display: contents;
    }

    .identifier {
      margin-right: 0.5rem;
    }

    .user-status-message {
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
      color: var(--primary-medium);
      font-size: var(--font-down-2);
      margin-left: 0.5em;

      .emoji {
        height: var(--font-0);
        width: var(--font-0);
      }
    }

    .suggestions-label {
      position: absolute;
      right: 0;
      top: 0;
      margin: 0.25em 0.25em 0 0;
      color: var(--primary-low-mid);
      font-size: var(--font-down-3);
      font-weight: bold;
      text-transform: uppercase;
    }
  }

  .control-group.assignee-error {
    .select-kit-header {
      border-color: var(--danger);
    }

    .error-label {
      color: var(--danger);
      font-size: var(--font-down-1);
    }
  }
}

.topic-list-item {
  .private-message-icon {
    margin-right: 5px;
  }
}

#topic-footer-button-assign {
  padding-top: 0.35em;
  padding-bottom: 0.35em;
  .d-button-label {
    .avatar {
      margin-right: 0.25em;
    }
  }
}

#topic-footer-dropdown-reassign {
  .name {
    font-weight: normal !important;
  }
  .avatar {
    margin-right: 0.25em;
  }
  .d-icon,
  i.fa {
    margin-right: 0.25em;
    color: var(--primary-medium);
  }
}

// Group assigns sidebar nav

.group-assignments {
  // a little extra space for long names
  min-width: 250px;
  li a {
    display: grid;
    grid-template-areas: " avatar names count";
    grid-template-columns: auto 1fr auto;
    align-items: center;
    padding: 0.5em 13px;

    .assign-image {
      width: 45px;
      margin-right: 0.5em;
      text-align: center;
      svg {
        width: 40px;
        height: 40px;
      }
    }

    .assign-names {
      font-size: $font-down-1;
      grid-area: names;
      overflow: hidden;
      line-height: normal;
    }
    .assign-name {
      @include ellipsis;
      margin-top: 3px;
    }
    .assign-username {
      font-weight: bold;
      @include ellipsis;
    }
    .assign-count {
      font-size: $font-up-2;
      grid-area: count;
    }
    .assign-image {
      grid-area: avatar;
      a {
        padding: 0;
        padding-right: 0.5em;
      }
    }
  }
  .search {
    width: 100%;
  }
  .search-div {
    padding: 0 13px;
  }
}

.assigned-to.discourse-tag.simple {
  color: var(--primary-medium);
}

.assigned-topic-list-header .topic-list-data.num:last-of-type {
  margin-right: 50px; // account for button in topic-list-items in topic-list-refactor
}

.assigned-topic-list-item {
  .topic-list-data {
    .topic-item-stats .category a {
      max-width: 145px;
    }
  }
}

.private-assign {
  // when assigns are not public, make the description look like a whisper
  .small-action-custom-message {
    font-style: italic;
    color: var(--primary-medium);
  }
}

